# blas-config

./: .gitignore  Makefile.am  README  bootstrap  cblas.pc  configure.ac
bench/: .gitignore  AUTHORS  README  bootstrap  configure.ac
bench/dummy_pkgconfig/: cblas.pc
bench/src/: Makefile.am  bench.h  blas_bench.c  timer.c
src/: Makefile.am  blas-config  blas-config.in
src/blas_config/: Makefile.am  app.py  arch.py  base.py  cmdline.py  factory.py  factory_cblas.py  factory_f77blas.py
