# Boilerplate
AC_PREREQ([2.69])
AC_INIT([blas-config], [1.0], [vbraun.name@gmail.com])
AM_INIT_AUTOMAKE

# Require Python 2.6 or later
AM_PATH_PYTHON([2.6])

# Paths and files
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/blas_config])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/blas_config/Makefile
])

# Write output, last statement
AC_OUTPUT

